--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ http://www.templatemo.com/tm-498-stimulus
                          </div>
 
                          <div id="contact-form">
-                              <form action="mailto:satyamozar@gmail.com" method="post" enctype="text/plain">
+                              <form action="mailto:satyamozar@gmail.com" method="post" enctype="multipart/form-data">
                                    <div class="wow fadeInUp" data-wow-delay="0.8s">
                                         <input name="fullname" type="text" class="form-control" id="fullname" placeholder="Your Name">
                                    </div>
